<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/classname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/classname"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/teacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teacher"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subject"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/lesson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lesson"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/newSubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newSubject"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/newTeacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newTeacher"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/room"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/instead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instead"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>