<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">

	<EditText
		android:id="@+id/teacherChooserEditText"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:layout_width="fill_parent"
		android:maxLines="1"
		android:hint="@string/teacherHint"/>

	<Button
		android:id="@+id/teacherChooserButton"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:text="@string/choose"/>

	<TextView
		android:id="@+id/teacherChooserTextView"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/warningTeacherChooser"
		android:textColor="#F71203"
		android:textStyle="bold"/>

</LinearLayout>

